--- a/organisms/demo.html
+++ b/organisms/demo.html
@@ -1,28 +1,262 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- styles -->
-    <link rel="stylesheet" href="../assets/css/aos.css">
-    <link rel="stylesheet" href="../assets/css/slick.css">
-    <link rel="stylesheet" href="../assets/css/slick-theme.css">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/style.css" />
-    <!-- styles -->
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- body content start -->
-    <!-- body content end -->
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>3 Stat Tiles — Chart.js Doughnuts</title>
 
-    <!-- scripts -->
-    <script src="../assets/js/jquery.slim.min.js"></script>
-    <script src="../assets/js/aos.js"></script>
-    <script src="../assets/js/slick.min.js"></script>
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/script.js"></script>
-    <!-- scripts -->
-  </body>
+  <!-- Bootstrap for layout (optional) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+
+  <style>
+    :root{
+      --card-bg: #ffffff;
+      --muted: #9aa0b4;
+      --shadow: rgba(20,20,40,0.06);
+    }
+
+    body {
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+      background:#f3f5f9;
+      padding:24px;
+    }
+
+    .stat-card {
+      position: relative;
+      width: 100%;
+      max-width: 380px;
+      background: var(--card-bg);
+      border-radius: 14px;
+      box-shadow: 0 8px 24px var(--shadow);
+      padding: 18px;
+      display:flex;
+      gap: 14px;
+      align-items:center;
+      margin: 12px auto;
+    }
+
+    .left{ flex:1; min-width:0; position:relative; }
+    .label{ color:var(--muted); font-size:13px; margin-bottom:6px; }
+    .big{ font-size:26px; font-weight:700; margin:0; }
+    .sub{ display:flex; gap:10px; align-items:center; margin-top:8px; color:var(--muted); font-size:13px; }
+    .dot{ width:8px; height:8px; border-radius:50%; box-shadow: 0 0 8px rgba(0,0,0,0.06); }
+
+    .chart-wrap { width:108px; height:108px; display:flex; align-items:center; justify-content:center; position:relative; }
+    canvas { width:96px !important; height:96px !important; } /* force canvas size */
+
+    .percent-badge {
+      position:absolute;
+      inset:auto;
+      left:50%;
+      top:50%;
+      transform:translate(-50%,-50%);
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      font-weight:700;
+      font-size:14px;
+      pointer-events:none;
+    }
+    .percent-badge small { font-size:11px; color:#fff; padding:6px 10px; border-radius:999px; font-weight:700; }
+
+    @media (max-width:420px){
+      .stat-card{ max-width:320px; padding:12px; gap:10px; }
+      .big{ font-size:22px; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="row gy-3">
+      <!-- Card 1 -->
+      <div class="col-md-4">
+        <div class="stat-card" id="card-1" data-initial="74">
+          <div class="left">
+            <div class="label">Total Applications</div>
+            <h2 class="big" id="big-1">5,672</h2>
+            <div class="sub"><div class="dot" style="background:#6f3cf1"></div><div>+14% Inc</div></div>
+          </div>
+
+          <div class="chart-wrap">
+            <canvas id="chart1" aria-label="Total Applications progress" role="img"></canvas>
+            <div class="percent-badge">
+              <div id="pLabel1">+74%</div>
+              <small id="pSmall1" style="background:linear-gradient(135deg,#6f3cf1,#8c61ff)">+74%</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col-md-4">
+        <div class="stat-card" id="card-2" data-initial="58">
+          <div class="left">
+            <div class="label">Active Users</div>
+            <h2 class="big" id="big-2">3,210</h2>
+            <div class="sub"><div class="dot" style="background:#17c3a2"></div><div>+8% Inc</div></div>
+          </div>
+
+          <div class="chart-wrap">
+            <canvas id="chart2" aria-label="Active Users progress" role="img"></canvas>
+            <div class="percent-badge">
+              <div id="pLabel2">+58%</div>
+              <small id="pSmall2" style="background:linear-gradient(135deg,#17c3a2,#3ae6c8)">+58%</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col-md-4">
+        <div class="stat-card" id="card-3" data-initial="45">
+          <div class="left">
+            <div class="label">Completed Tasks</div>
+            <h2 class="big" id="big-3">1,203</h2>
+            <div class="sub"><div class="dot" style="background:#ff8a65"></div><div>+5% Inc</div></div>
+          </div>
+
+          <div class="chart-wrap">
+            <canvas id="chart3" aria-label="Completed Tasks progress" role="img"></canvas>
+            <div class="percent-badge">
+              <div id="pLabel3">+45%</div>
+              <small id="pSmall3" style="background:linear-gradient(135deg,#ff8a65,#ff6b6b)">+45%</small>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+<script>
+/*
+  Chart.js doughnut setup:
+  - Each chart shows [percent, 100-percent]
+  - The first slice uses a gradient; second slice is the track gray.
+  - Smooth animation achieved via chart.update({duration: ...})
+  - Center numeric label is updated separately (we tween it).
+*/
+
+window.addEventListener('load', () => {
+
+  // Helper: smooth tween for numbers (easeInOutCubic)
+  function tweenNumber(from, to, duration, onTick, onComplete){
+    const start = performance.now();
+    function frame(now){
+      const t = Math.min(1, (now - start) / duration);
+      const eased = t < 0.5 ? 4*t*t*t : 1 - Math.pow(-2*t + 2, 3)/2;
+      const val = from + (to - from) * eased;
+      onTick(val);
+      if (t < 1) requestAnimationFrame(frame);
+      else if (onComplete) onComplete();
+    }
+    requestAnimationFrame(frame);
+  }
+
+  // Chart factory
+  function createDoughnut(canvas, colorStops, initialPercent) {
+    const ctx = canvas.getContext('2d');
+    // create gradient for the active slice
+    const grad = ctx.createLinearGradient(0, 0, canvas.width || 96, 0);
+    grad.addColorStop(0, colorStops[0]);
+    grad.addColorStop(1, colorStops[1]);
+
+    const data = {
+      datasets: [{
+        data: [initialPercent, 100 - initialPercent],
+        backgroundColor: [grad, '#eef0f6'],
+        borderWidth: 0,
+        hoverOffset: 0
+      }]
+    };
+
+    const chart = new Chart(ctx, {
+      type: 'doughnut',
+      data,
+      options: {
+        responsive: false,
+        maintainAspectRatio: false,
+        cutout: '76%',
+        rotation: -90,      // make 0% start at top (keeps look like SVG)
+        circumference: 360,
+        animation: {
+          duration: 1100,
+          easing: 'cubicBezier(.22,.9,.18,1)'
+        },
+        plugins: {
+          tooltip: { enabled: false },
+          legend: { display: false }
+        }
+      }
+    });
+
+    return { chart, grad };
+  }
+
+  // Set up cards (with colors and initial values)
+  const cardsCfg = [
+    { canvasId: 'chart1', colorStops: ['#6f3cf1', '#8c61ff'], pLabel: 'pLabel1', pSmall: 'pSmall1', initial: parseInt(document.getElementById('card-1').dataset.initial || 74) },
+    { canvasId: 'chart2', colorStops: ['#17c3a2', '#3ae6c8'], pLabel: 'pLabel2', pSmall: 'pSmall2', initial: parseInt(document.getElementById('card-2').dataset.initial || 58) },
+    { canvasId: 'chart3', colorStops: ['#ff8a65', '#ff6b6b'], pLabel: 'pLabel3', pSmall: 'pSmall3', initial: parseInt(document.getElementById('card-3').dataset.initial || 45) }
+  ];
+
+  const instances = cardsCfg.map(cfg => {
+    const canvas = document.getElementById(cfg.canvasId);
+    // set explicit pixel size for consistent gradients
+    canvas.width = 96; canvas.height = 96;
+    const { chart } = createDoughnut(canvas, cfg.colorStops, cfg.initial);
+    return {
+      chart,
+      cfg
+    };
+  });
+
+  // update helper: smoothly update chart and center labels
+  function updateCard(instance, newPercent) {
+    newPercent = Math.max(0, Math.min(100, Math.round(newPercent)));
+    const ds = instance.chart.data.datasets[0];
+    const from = ds.data[0];
+    ds.data[0] = newPercent;
+    ds.data[1] = 100 - newPercent;
+    // perform chart update with duration matching tween
+    instance.chart.update({ duration: 1100, easing: 'cubicBezier(.22,.9,.18,1)' });
+
+    // update numeric badges smoothly
+    const labelEl = document.getElementById(instance.cfg.pLabel);
+    const smallEl = document.getElementById(instance.cfg.pSmall);
+    const startVal = parseInt((labelEl && labelEl.textContent || '0').replace('+','')) || 0;
+    tweenNumber(startVal, newPercent, 1100, val => {
+      const disp = `${Math.round(val) >= 0 ? '+' : ''}${Math.round(val)}%`;
+      if (labelEl) labelEl.textContent = disp;
+      if (smallEl) smallEl.textContent = disp;
+    });
+  }
+
+  // initial staggered reveal
+  instances.forEach((inst, i) => {
+    setTimeout(() => {
+      // initial already set in chart creation; ensure label matches
+      const init = cardsCfg[i].initial;
+      const labelEl = document.getElementById(cardsCfg[i].pLabel);
+      const smallEl = document.getElementById(cardsCfg[i].pSmall);
+      if (labelEl) labelEl.textContent = `+${init}%`;
+      if (smallEl) smallEl.textContent = `+${init}%`;
+    }, 120 + i * 120);
+  });
+
+  // Periodic updates (simulated). Replace simulation with fetch() for real data.
+  setInterval(() => {
+    // tune ranges per card or replace with server values
+    updateCard(instances[0], Math.round(50 + Math.random() * 50)); // card1: 50..100
+    updateCard(instances[1], Math.round(30 + Math.random() * 55)); // card2: 30..85
+    updateCard(instances[2], Math.round(20 + Math.random() * 60)); // card3: 20..80
+  }, 3500);
+
+}); // load
+</script>
+</body>
 </html>
